@@ -5,6 +5,7 @@ import java.time.YearMonth;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -44,17 +45,17 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
     }
 
     public static DocIndexerConfig fromConfig(ConfigInputFormat config) {
-        DocIndexerConfig docIndexer=null;
+        DocIndexerConfig docIndexer = null;
         switch (config.getFileType()) {
         case XML:
-            for (ConfigInputFormat.FileTypeOption fto : ConfigInputFormat.FileTypeOption.fromConfig(config, ConfigInputFormat.FileType.XML)) {
-                if (fto== ConfigInputFormat.FileTypeOption.SAXONICA) {
-                    docIndexer=new DocIndexerSaxon();
+            for (ConfigInputFormat.FileTypeOption fto: ConfigInputFormat.FileTypeOption.fromConfig(config, ConfigInputFormat.FileType.XML)) {
+                if (fto == ConfigInputFormat.FileTypeOption.SAXONICA) {
+                    docIndexer = new DocIndexerSaxon();
                     break;
                 }
             }
-            if (docIndexer==null) {
-                docIndexer=new DocIndexerXPath();
+            if (docIndexer == null) {
+                docIndexer = new DocIndexerXPath();
             }
             break;
         case TABULAR:
@@ -89,7 +90,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
 
     boolean inited = false;
 
-    protected Map<String, Collection<String>> sortedMetadataValues = new HashMap<>();
+    protected final Map<String, Collection<String>> sortedMetadataValues = new HashMap<>();
 
     public void setConfigInputFormat(ConfigInputFormat config) {
         this.config = config;
@@ -97,10 +98,18 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
 
     @SuppressWarnings("deprecation")
     protected SensitivitySetting getSensitivitySetting(ConfigAnnotation mainAnnotation) {
-        if (mainAnnotation.getSensitivity() == SensitivitySetting.DEFAULT) {
-            return getSensitivitySetting(mainAnnotation.getName());
+        SensitivitySetting sensitivity = mainAnnotation.getSensitivity();
+        if (sensitivity == SensitivitySetting.DEFAULT) {
+            // Historic behaviour: if no sensitivity is given, "word" and "lemma" annotations will
+            // get SensitivitySetting.SENSITIVE_AND_INSENSITIVE; all others get SensitivitySetting.ONLY_INSENSITIVE.
+            // Unfortunately, many existing configurations rely on this.
+            String name = mainAnnotation.getName();
+            if (name.equals(AnnotatedFieldNameUtil.LEMMA_ANNOT_NAME) || name.equals(AnnotatedFieldNameUtil.getDefaultMainAnnotationName()))
+                sensitivity = SensitivitySetting.SENSITIVE_AND_INSENSITIVE;
+            else
+                sensitivity = SensitivitySetting.ONLY_INSENSITIVE;
         }
-        return mainAnnotation.getSensitivity();
+        return sensitivity;
     }
 
     @Override
@@ -131,7 +140,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
             addAnnotatedField(fieldWriter);
 
             AnnotationWriter annotStartTag = fieldWriter.addAnnotation(null, AnnotatedFieldNameUtil.TAGS_ANNOT_NAME,
-                    getSensitivitySetting(AnnotatedFieldNameUtil.TAGS_ANNOT_NAME), true);
+                    SensitivitySetting.ONLY_SENSITIVE, true);
             annotStartTag.setHasForwardIndex(false);
 
             // Create properties for the other annotations
@@ -148,7 +157,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
             if (!fieldWriter.hasAnnotation(AnnotatedFieldNameUtil.PUNCTUATION_ANNOT_NAME)) {
                 // Hasn't been created yet. Create it now.
                 fieldWriter.addAnnotation(null, AnnotatedFieldNameUtil.PUNCTUATION_ANNOT_NAME,
-                        getSensitivitySetting(AnnotatedFieldNameUtil.PUNCTUATION_ANNOT_NAME), false);
+                        SensitivitySetting.ONLY_INSENSITIVE, false);
             }
             if (getDocWriter() != null) {
                 IndexMetadataImpl indexMetadata = (IndexMetadataImpl)getDocWriter().indexWriter().metadata();
@@ -197,7 +206,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
             case "parsePos":
             {
                 // Get individual feature out of a part of speech string like "NOU(gender=f,number=p)"
-                String field = param.containsKey("field") ? param.get("field") : "_";
+                String field = param.getOrDefault("field", "_");
                 result = opParsePartOfSpeech(result, field);
                 break;
             }
@@ -218,8 +227,6 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
     /**
      * process linked documents when configured. An xPath processor can be provided,
      * it will retrieve information from the document to construct a path to a linked document.
-     * @param ld
-     * @param xpathProcessor
      */
     protected void processLinkedDocument(ConfigLinkedDocument ld, Function<String, String> xpathProcessor) {
         // Resolve linkPaths to get the information needed to fetch the document
@@ -288,13 +295,11 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
 
     protected List<String> processStringMultipleValues(String input, List<ConfigProcessStep> process, Map<String, String> mapValues) {
         
-        List<String> result = Arrays.asList(input);
+        List<String> result = new ArrayList<>();
+        result.add(input);
 
         for (ConfigProcessStep step : process) {
             String method = step.getMethod();
-//            if (input.indexOf("f|m") >= 0 && method.equals("split")) {
-//                System.out.println("");
-//            }
             Map<String, String> param = step.getParam();
 
             switch (method) {
@@ -316,9 +321,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
             case "split": {
                 ArrayList<String> r = new ArrayList<>();
                 for (String s : result) {
-                    for (String out : opSplit(s, param)) {
-                        r.add(out);
-                    }
+                    r.addAll(opSplit(s, param));
                 }
                 result = r;
                 break;
@@ -336,7 +339,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
             case "parsePos":
             {
                 // Get individual feature out of a part of speech string like "NOU(gender=f,number=p)"
-                String field = param.containsKey("field") ? param.get("field") : "_";
+                String field = param.getOrDefault("field", "_");
                 for (int i = 0; i < result.size(); ++i) {
                     result.set(i, opParsePartOfSpeech(result.get(i), field));
                 }
@@ -364,8 +367,8 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
         return result;
     }
 
-    static final Pattern mainPosPattern = Pattern.compile("^([^\\(]+)(\\s*\\(.*\\))?$");
-    static final Pattern featurePattern = Pattern.compile("^[^\\(]+(\\s*\\((.*)\\))?$");
+    static final Pattern mainPosPattern = Pattern.compile("^([^(]+)(\\s*\\(.*\\))?$");
+    static final Pattern featurePattern = Pattern.compile("^[^(]+(\\s*\\((.*)\\))?$");
     static String opParsePartOfSpeech(String result, String field) {
         // Trim character/string from beginning and end
         result = result.trim();
@@ -386,7 +389,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
 
     static String opStrip(String result, Map<String, String> param) {
         // Trim character/string from beginning and end
-        String stripChars = param.containsKey("chars") ? param.get("chars") : " ";
+        String stripChars = param.getOrDefault("chars", " ");
         result = StringUtils.strip(result, stripChars);
         return result;
     }
@@ -400,9 +403,8 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
      * 
      * Result: "20001019"
      *  
-     * @param result
-     * @param param
-     * @return
+     * @param param operation parameters
+     * @return resulting value
      */
     protected String opConcatDate(Map<String, String> param) {
         String yearField = param.get("yearField");
@@ -428,7 +430,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
     
     protected String opChatFormatAgeToMonths(String result) {
         // 1;10.30 => 1 jaar, 10 maanden, 30 dagen => afgerond 23 maanden?
-        String[] parts = result.split("[;\\.]", 3);
+        String[] parts = result.split("[;.]", 3);
         int years = 0;
         int months = 0;
         int days = 0;
@@ -455,7 +457,6 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
      *      if "keep" == "all" return all parts
      *      if "keep" == "both" return both the original (unsplit) string and all parts
      * </pre>
-     * @return
      */
     private List<String> opSplit(String result, Map<String, String> param) {
         // Split on a separator regex and keep one or all parts (first part by default)
@@ -469,9 +470,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
         if (keep.equals("both")) {
             ArrayList<String> r = new ArrayList<>();
             r.add(result);
-            for (String s : parts) {
-                r.add(s);
-            }
+            Collections.addAll(r, parts);
             return r;
         }
 
@@ -482,7 +481,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
             i = 0;
         }
 
-        return Arrays.asList(i < parts.length ? parts[i] : "");
+        return List.of(i < parts.length ? parts[i] : "");
     }
 
     /**
@@ -495,10 +494,9 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
      * - "field" for the metadata field whose value will be appended
      * - "value" for a constant value ("field" takes precedence if it exists)
      * </pre>
-     * @return
      */
     private String opAppend(String result, Map<String, String> param) {
-        String separator = param.containsKey("separator") ? param.get("separator") : " ";
+        String separator = param.getOrDefault("separator", " ");
         String field = param.get("field");
         String value;
         if (field != null)
@@ -523,7 +521,6 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
      * - "separator" to join the metadata field if it contains multiple values (defaults to ;)
      * - "value" for a constant value ("field" takes precedence if it exists)
      * </pre>
-     * @return
      */
     private String opDefault(String result, Map<String, String> param) {
         if (result.length() == 0) {
@@ -543,13 +540,11 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
     /**
      * Perform a regex replace on result. Allows group references.
      *
-     * @param result
      * @param param
      * <pre>
      * - "find" for the regex
      * - "replace" the replacement string
      * </pre>
-     * @return
      */
     private static String opReplace(String result, Map<String, String> param) {
         String find = param.get("find");
@@ -572,7 +567,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
      *
      * @param name metadata field name
      * @param value metadata field value
-     * @return processed value (or orifinal value if not found / no processing steps
+     * @return processed value (or original value if not found / no processing steps
      *         defined)
      */
     protected String processMetadataValue(String name, String value) {
@@ -606,7 +601,7 @@ public abstract class DocIndexerConfig extends DocIndexerBase {
     }
 
     private static List<String> collectionToList(Collection<String> c) {
-        return c == null ? null : c instanceof List ? (List<String>)c : new ArrayList<String>(c);
+        return c == null ? null : c instanceof List ? (List<String>)c : new ArrayList<>(c);
     }
 
     /**
