@@ -19,7 +19,6 @@ package nl.inl.blacklab.search.lucene;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -55,7 +54,7 @@ import nl.inl.blacklab.search.results.QueryInfo;
  */
 public final class BLSpanOrQuery extends BLSpanQuery {
 
-    SpanOrQuery inner;
+    final SpanOrQuery inner;
 
     String field;
 
@@ -650,7 +649,7 @@ public final class BLSpanOrQuery extends BLSpanQuery {
         if (canBeTokenState) {
             // Yep. Rewrite to a large NfaStateToken.
             NfaState tokenState = NfaState.token(luceneField, terms, null);
-            return new Nfa(tokenState, Arrays.asList(tokenState));
+            return new Nfa(tokenState, List.of(tokenState));
         }
 
         List<NfaState> states = new ArrayList<>();
@@ -662,7 +661,7 @@ public final class BLSpanOrQuery extends BLSpanQuery {
 //			dangling.addAll(frag.getDanglingArrows());
         }
         NfaState orAcyclic = NfaState.or(false, states, hitsAllSameLength());
-        return new Nfa(orAcyclic, Arrays.asList(orAcyclic));
+        return new Nfa(orAcyclic, List.of(orAcyclic));
     }
 
     /**
@@ -737,7 +736,7 @@ public final class BLSpanOrQuery extends BLSpanQuery {
             clausesCalculated++;
             i += skip;
         }
-        return cost * clauses.length / clausesCalculated;
+        return (long) cost * clauses.length / clausesCalculated;
     }
 
     /**
