@@ -1,18 +1,3 @@
-/*******************************************************************************
- * Copyright (c) 2010, 2012 Institute for Dutch Lexicology
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *******************************************************************************/
 package nl.inl.blacklab.search.lucene;
 
 import java.io.IOException;
@@ -42,10 +27,6 @@ abstract class BLSpanQueryAbstract extends BLSpanQuery {
     protected String luceneFieldName = "";
 
     protected List<BLSpanQuery> clauses;
-    
-    public BLSpanQueryAbstract(QueryInfo queryInfo) {
-        super(queryInfo);
-    }
 
     public BLSpanQueryAbstract(BLSpanQuery first, BLSpanQuery second) {
         super(first != null ? first.queryInfo : second != null ? second.queryInfo : null);
@@ -55,7 +36,7 @@ abstract class BLSpanQueryAbstract extends BLSpanQuery {
 
     public BLSpanQueryAbstract(BLSpanQuery clause) {
         super(clause != null ? clause.queryInfo : null);
-        clauses = Arrays.asList(clause);
+        clauses = List.of(clause);
         determineBaseFieldName();
     }
 
@@ -129,7 +110,7 @@ abstract class BLSpanQueryAbstract extends BLSpanQuery {
         List<BLSpanQuery> rewritten = new ArrayList<>(clauses.size());
         boolean someRewritten = false;
         for (BLSpanQuery c : clauses) {
-            BLSpanQuery query = c == null ? null : (BLSpanQuery) c.rewrite(reader);
+            BLSpanQuery query = c == null ? null : c.rewrite(reader);
             rewritten.add(query);
             if (query != c)
                 someRewritten = true;
